--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -76,10 +76,10 @@
   width: 32px;
 }
 .home {
-  position: relative;
+  position: fixed;
   background-color: var(--others-screen-bg);
   width: 100%;
-  height: 812px;
+  height: 850px;
   overflow: hidden;
   text-align: left;
   font-size: 23px;
