--- a/src/global.css
+++ b/src/global.css
@@ -2,7 +2,12 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;700;800&display=swap");
+/* html {
+  height: 100vh;
+} */
 body {
+  /* display: flex; */
+  /* height: 100vh; */
   margin: 0;
   line-height: normal;
 }
